<resources>
    <string name="app_name">EVS</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="ingreseNombreUsuario">Ingrese nombre de usuario</string>
    <string name="ingresecontrasena">Ingrese contraseña</string>
    <string name="iniciarSesion">Iniciar Sesión</string>
    <string name="IngreseNombreC">Ingrese su nombre completo</string>
    <string name="IngreseNombreU">Ingrese nombre de usuario</string>
    <string name="ingreseClave">Ingrese contraseña para la cuenta</string>
    <string name="ingresenuevamente">Ingrese nuevamente la contraseña</string>
    <string name="crearCuenta">Crear cuenta</string>
    <string name="gps">GPS: No activado</string>

</resources>
